fixes icon alignment

--- a/src/block/button/style.scss
+++ b/src/block/button/style.scss
@@ -8,7 +8,6 @@
 
 	.stk-button__button {
 		// make sure that the anchor tag's width matches the parent's ( stk-button ) width.
-		display: inline-block;
 		width: 100%;
 		text-decoration: none;
 	}
